Project Deployer {
  database_type: 'MySQL'
  Note: '''
    # Authz Database
  '''
}


Table accounts {
  account_id integer [primary key]
  first_name string
  last_name string
  username string
  password string
  email string
  token string
  role_id integer [ref: - roles.role_id]
  last_login_dt timestamp
  
  created_by integer
  modified_by integer
  created_dt timestamp
  modified_dt timestamp
  is_active integer
}

Table roles {
  role_id integer [primary key]
  description string
  name string
  ref_name string
  created_by integer
  modified_by integer
  created_dt timestamp
  modified_dt timestamp
  is_active integer
}

Table permissions {
  permission_id integer [primary key]
  description string
  name string
  ref_name string
  scope string
  module string
  sequence integer
  created_by integer
  modified_by integer
  created_dt timestamp
  modified_dt timestamp
  is_active integer
}

Table role_permissions {
  role_permission_id integer [primary key]
  permission_id integer  [ref: > permissions.permission_id]
  role_id integer [ref: > roles.role_id]
  created_by integer
  modified_by integer
  created_dt timestamp
  modified_dt timestamp
  is_active integer
}

Table apps {
  app_id integer [primary key]
  webhook_url string
  compose_path string
  root_path string
  repo string
  branch string
  name string
  category string
  status string
  created_by integer
  modified_by integer
  hooked_dt timestamp
  created_dt timestamp
  modified_dt timestamp
  is_active integer
}

Table envs {
  env_id integer [primary key]
  app_id integer [ref: > apps.app_id]
  prop_key: string
  prop_value: string

  created_by integer
  modified_by integer
  created_dt timestamp
  modified_dt timestamp
}
